# ai-agent-test

./: .gitignore  1.md  app_all_files.md  pyproject.toml
app/: common.py
app/bailian/: bailian.py  bailian_agent.py  bailian_annotation_prompt.py  bailian_output_parser.py  bailian_prompt.py  bailian_python_perl.py  bailian_qwq.py  bailian_tools.py  bailian_tools2.py
app/code_agent/: 3afbed54-5bfb-42fd-91c5-994ba940111e.json
app/code_agent/agent/: agent_chat.py  code_agent.py  model_chat.py
app/code_agent/mcp/: shell_tools.py
app/code_agent/model/: qwen.py
app/code_agent/prompts/: multi_chat_prompts.py
app/code_agent/tools/: file_saver.py  file_tools.py  shell_tools.py
app/code_agent/utils/: mcp.py
app/mcp_demo/amap/: amap_mcp_client.py
app/mcp_demo/stdio/: mcp_playwright_client.py  mcp_stdio_client.py  mcp_stdio_server.py
app/ollama/: 1.yaml  allama.py
